drop optional dependency on Apache commons-codec