@@ -1,15 +1,17 @@
 package com.github.scribejava.apis.service;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.util.Map;
 import java.util.TreeMap;
-import org.apache.commons.codec.CharEncoding;
-import static org.apache.commons.codec.digest.DigestUtils.md5Hex;
 import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.model.OAuthConfig;
 import com.github.scribejava.core.model.OAuthRequest;
 import com.github.scribejava.core.oauth.OAuth20Service;
+import java.io.UnsupportedEncodingException;
+import java.nio.charset.Charset;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.util.Formatter;
 import java.util.stream.Collectors;
 
 public class MailruOAuthService extends OAuth20Service {
@@ -38,11 +40,25 @@ public class MailruOAuthService extends OAuth20Service {
                 final String urlNew = map.entrySet().stream()
                         .map(entry -> entry.getKey() + '=' + entry.getValue())
                         .collect(Collectors.joining());
-                final String sigSource = URLDecoder.decode(urlNew, CharEncoding.UTF_8) + clientSecret;
-                request.addQuerystringParameter("sig", md5Hex(sigSource));
+                final String sigSource = URLDecoder.decode(urlNew, "UTF-8") + clientSecret;
+                request.addQuerystringParameter("sig", md5(sigSource));
             }
         } catch (UnsupportedEncodingException e) {
             throw new IllegalStateException(e);
+        }
+    }
+
+    public static String md5(String orgString) {
+        try {
+            final MessageDigest md = MessageDigest.getInstance("MD5");
+            final byte[] array = md.digest(orgString.getBytes(Charset.forName("UTF-8")));
+            final Formatter builder = new Formatter();
+            for (byte b : array) {
+                builder.format("%02x", b);
+            }
+            return builder.toString();
+        } catch (NoSuchAlgorithmException e) {
+            throw new IllegalStateException("MD5 is unsupported?", e);
         }
     }
 }
